# MoonTranslator

./: .gitignore  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
installer/: Cargo.toml  build.rs
installer/src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: cursor.rs  mod.rs  proxy.rs  store.rs  translate.rs  updater.rs  window.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/popup/: page.tsx
src/components/: ChangelogModal.tsx  DropdownPortal.tsx  LanguageSelector.tsx  SettingsPanel.tsx  TranslatorInput.tsx  TranslatorOutput.tsx  UpdateBanner.tsx
src/lib/: translate.ts
src/store/: popupStore.ts  settingsStore.ts  translatorStore.ts
types/: cache-life.d.ts  routes.d.ts  validator.ts
