[package]
name = "moontranslator_installer"
version = "0.1.0"
edition = "2021"
authors = ["MoonTranslator"]
description = "Installer for MoonTranslator"

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "0.6"
serde_json = "1.0"

[build-dependencies]
winres = "0.1"
